--- a/index.html
+++ b/index.html
@@ -70,9 +70,12 @@
                             <div class="dropdown-menu m-0">
 
 
-                                <a href="./open-plots.html" class="dropdown-item">Open Plots</a>
+
+
+                                <a href="./open-plots.html" class="dropdown-item ">OPEN PLOTS</a>
                                 <a href="./farm-lands.html" class="dropdown-item">Form-Lands</a>
                                 <a href="./investments.html" class="dropdown-item">Investment</a>
+                                <a href="./projects.html" class="dropdown-item">Projects</a>
 
                             </div>
                         </div>
@@ -650,9 +653,9 @@
 
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-primary text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
-        <div class="over"></div>
-        <div class="container py-5 px-lg-5">
+    <div class="container-fluid  text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+
+        <div class="container pt-1 pb-4 px-lg-5">
             <div class="row gy-5 gx-4 pt-5">
 
                 <div class="col-lg-8 col-md-12">
@@ -664,7 +667,7 @@
 
                             <a class="btn btn-link" href="./gallery.html">Gallery</a>
                             <a class="btn btn-link" href="./contact.html">Contact</a>
-                            <!-- <a class="btn btn-link" href="">Support</a> -->
+
                         </div>
                         <div class="col-md-6">
                             <h5 class="fw-bold text-white mb-4">Our Services</h5>
@@ -717,6 +720,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
     <!-- Footer End -->
