--- a/investments.html
+++ b/investments.html
@@ -61,11 +61,14 @@
                         <a href="gallery.html" class="nav-item nav-link">Gallery</a>
 
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">SERVICES</a>
+                            <a href="#" class="nav-link dropdown-toggle  active" data-bs-toggle="dropdown">SERVICES</a>
                             <div class="dropdown-menu m-0">
-                                <a href="./open-plots.html" class="dropdown-item">Open Plots</a>
+
+
+                                <a href="./open-plots.html" class="dropdown-item ">OPEN PLOTS</a>
                                 <a href="./farm-lands.html" class="dropdown-item">Form-Lands</a>
                                 <a href="./investments.html" class="dropdown-item active">Investment</a>
+                                <a href="./projects.html" class="dropdown-item">Projects</a>
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -85,8 +88,8 @@
                                 <ol
                                     class="breadcrumb justify-content-center justify-content-lg-start animated slideInLeft">
                                     <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                                    <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                                    <li class="breadcrumb-item text-white active" aria-current="page">Investment</li>
+                                    <li class="breadcrumb-item"><a class="text-white" href="#">Services</a></li>
+                                    <li class="breadcrumb-item text-white active" aria-current="page">Investments</li>
                                 </ol>
                             </nav>
                         </div>
@@ -152,75 +155,68 @@
 
 
         <!-- Footer Start -->
-        <div class="container-fluid bg-primary text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
-            <div class="container py-5 px-lg-5">
+        <div class="container-fluid  text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+
+            <div class="container pt-1 pb-4 px-lg-5">
                 <div class="row gy-5 gx-4 pt-5">
-                    <div class="col-12">
-                        <h5 class="fw-bold text-white mb-4">Subscribe Our Newsletter</h5>
-                        <div class="position-relative" style="max-width: 400px;">
-                            <input class="form-control bg-white border-0 w-100 py-3 ps-4 pe-5" type="text"
-                                placeholder="Enter your email">
-                            <button type="button"
-                                class="btn btn-primary py-2 px-3 position-absolute top-0 end-0 mt-2 me-2">Submit</button>
-                        </div>
-                    </div>
-                    <div class="col-lg-5 col-md-12">
+
+                    <div class="col-lg-8 col-md-12">
                         <div class="row gy-5 g-4">
                             <div class="col-md-6">
-                                <h5 class="fw-bold text-white mb-4">About Us</h5>
-                                <a class="btn btn-link" href="">About Us</a>
-                                <a class="btn btn-link" href="">Contact Us</a>
-                                <a class="btn btn-link" href="">Privacy Policy</a>
-                                <a class="btn btn-link" href="">Terms & Condition</a>
-                                <a class="btn btn-link" href="">Support</a>
+                                <h5 class="fw-bold text-white mb-4">Our links</h5>
+                                <a class="btn btn-link" href="/">Home </a>
+                                <a class="btn btn-link" href="./about.html">About </a>
+
+                                <a class="btn btn-link" href="./gallery.html">Gallery</a>
+                                <a class="btn btn-link" href="./contact.html">Contact</a>
+
                             </div>
                             <div class="col-md-6">
                                 <h5 class="fw-bold text-white mb-4">Our Services</h5>
-                                <a class="btn btn-link" href="">Domain Register</a>
-                                <a class="btn btn-link" href="">Shared Hosting</a>
-                                <a class="btn btn-link" href="">VPS Hosting</a>
-                                <a class="btn btn-link" href="">Dedicated Hosting</a>
-                                <a class="btn btn-link" href="">Reseller Hosting</a>
+                                <a class="btn btn-link" href="./open-plots.html">Open Plots</a>
+                                <a class="btn btn-link" href="./farm-lands.html">Form-Lands</a>
+                                <a class="btn btn-link" href="./investments.html">Investments</a>
+                                <a class="btn btn-link" href="">Projects</a>
+
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-3">
+                    <div class="col-md-6 col-lg-4">
                         <h5 class="fw-bold text-white mb-4">Get In Touch</h5>
                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>402, MATHRUSREE HOMES APARTMENTS,
                             MATHRUSREE NAGAR MIYAPUR, HYDERABAD, 500049</p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 8885667888</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>rajaroypramotors21@gmail.com
-
-                        </p>
+                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>rajaroypramotors21@gmail.com</p>
                         <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://twitter.com/RR_Pramotors"
+                                target="_blank"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-outline-light btn-social"
+                                href="https://www.facebook.com/RajaRoyPramotors21" target="_blank"><i
+                                    class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"
+                                    target="_blank"></i></a>
+
+                            <a class="btn btn-outline-light btn-social"
+                                href="https://www.instagram.com/raja_roy_pramotors/" target="_blank"><i
+                                    class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4 mt-lg-n5">
-                        <div class="bg-light rounded" style="padding: 30px;">
-                            <input type="text" class="form-control border-0 py-2 mb-2" placeholder="Name">
-                            <input type="email" class="form-control border-0 py-2 mb-2" placeholder="Email">
-                            <textarea class="form-control border-0 mb-2" rows="2" placeholder="Message"></textarea>
-                            <button class="btn btn-primary w-100 py-2">Send Message</button>
-                        </div>
-                    </div>
+
                 </div>
             </div>
             <div class="container px-lg-5">
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
+                            &copy; <a class="border-bottom" href="#">RAJA ROY PRAMOTORS</a>, All Right Reserved.
 
-                            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                            Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+
+                            Designed By <a class="border-bottom" href="https://www.thepatternscompany.com/">The Patterns
+                                Company</a>
                         </div>
                         <div class="col-md-6 text-center text-md-end">
                             <div class="footer-menu">
-                                <a href="">Home</a>
+                                <a href="/">Home</a>
                                 <a href="">Cookies</a>
                                 <a href="">Help</a>
                                 <a href="">FQAs</a>
@@ -228,6 +224,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
         <!-- Footer End -->
