--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
+                        <a href="about.html" class="nav-item nav-link active">About</a>
                         <a href="gallery.html" class="nav-item nav-link">Gallery</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">SERVICES</a>
@@ -67,7 +67,7 @@
                                 <a href="./investments.html" class="dropdown-item">Investment</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link active">Contact</a>
+                        <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal"
                         data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>
@@ -126,26 +126,18 @@
                             <h1 class="mb-2">WELCOME TO THE
                                 RAJA ROY PRAMOTORS</h1>
                         </div>
-                        <p class="mb-4">Welcome to RAJA ROY PRAMOTORS, where your dreams find a place to thrive. We
-                            pride ourselves not only on providing exceptional real estate services but also on fostering
-                            enduring relationships with our clients. Your satisfaction and trust are paramount to us,
-                            and we are dedicated to guiding you through every step of your real estate journey. With a
-                            focus on sustainability and community impact, we strive to make a positive difference while
-                            helping you find the perfect sanctuary to call home.
+                        <p class="mb-4">Welcome to RAJA ROY PRAMOTORS, As the Chairman, I extend a heartfelt welcome to you. At our core, we're not just in the business of properties; we're in the business of making dreams come true. Whether you're buying, selling, or investing, we're here to guide you every step of the way. Explore the boundless opportunities that await you in the world of real estate.
 
-                            Explore our website and discover a diverse range of properties meticulously curated to suit
-                            your needs. Whether you're searching for your first home, expanding for a growing family, or
-                            seeking an investment opportunity, we have something special waiting for you. Thank you for
-                            considering RAJA ROY PRAMOTORS as your partner in real estate. Let's embark on this journey
-                            together and turn your aspirations into reality.</p>
+                            At RAJA ROY PRAMOTORS, we believe that a home is not just a physical space; it is a sanctuary where dreams are woven, memories are cherished, and lives are transformed. Our mission is to help you find the perfect place to call home, whether it’s your first step into the real estate market, an upgrade to accommodate a growing family, or an investment opportunity to secure your future.
+                            
+                            As a company, we are not just focused on transactions; we believe in building meaningful and long-lasting relationships. Our success is defined by the trust and satisfaction of our clients, and we are grateful to have played a role in the realization of countless dreams</p>
                         <div class="row g-3">
-                            <div class="col-sm-4 wow fadeIn" data-wow-delay="0.1s">
-                                <div class="bg-light rounded text-center p-4">
-                                    <i class="fa fa-users-cog fa-2x text-primary mb-2"></i>
-                                    <h2 class="mb-1" data-toggle="counter-up">1234</h2>
-                                    <p class="mb-0">Experts</p>
-                                </div>
-                            </div>
+                               <p class="mb-4">Beyond our commitment to excellence in service, we also understand the responsibility we have towards the environment and the communities we operate in. We strive to make a positive impact by embracing sustainable practices and giving back through various philanthropic initiatives.
+
+                                I invite you to explore our website, where you will find a wide range of properties tailored to your needs. Whether you’re looking for a cozy apartment, a charming suburban home, or a commercial space to grow your business, we have something to offer for everyone.
+                                
+                                Thank you for considering Raja Roy Pramotors as your trusted real estate partner. We look forward to helping you find the perfect place to call home and making your real estate journey a memorable and fulfilling one.</p>
+
                             <div class="col-sm-4 wow fadeIn" data-wow-delay="0.3s">
                                 <div class="bg-light rounded text-center p-4">
                                     <i class="fa fa-users fa-2x text-primary mb-2"></i>
@@ -184,8 +176,14 @@
             </div>
         </div>
         <!-- Team End -->
-
-
+        <div class="text-center col-lg-12 py-1 m-2">
+            <h1>Our History</h1>
+            <h2>Our Most Efficient Year</h2>
+        </div>
+        <div class="col-lg-6 py-3 m-4 mb-1">
+            <h1>RAJA ROY PRAMOTORS,2021</h1>
+            <p>Founded 2021, RAJA ROY PRAMOTORS was born out of a passion for real estate and a desire to create a positive impact on people's lives. Our journey began with a small team of dedicated professionals who shared a common goal: to provide exceptional real estate services that go above and beyond expectations. Over the years, we have grown and expanded, gaining extensive experience and building a vast network of satisfied clients. Throughout this journey, our core values of integrity, professionalism, and personalized service have remained at the forefront of everything we do.</p>
+        </div>
         <!-- Footer Start -->
         <div class="container-fluid bg-primary text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
             <div class="container py-5 px-lg-5">
