--- a/contact.html
+++ b/contact.html
@@ -122,12 +122,15 @@
         <!-- Contact Start -->
         <div class="container-xxl py-5">
             <div class="container px-lg-5">
-                <div class="section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp"
+                <div class="row section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp"
                     data-wow-delay="0.1s" style="max-width: 600px;">
                     <h1 class="mb-3">Contact For Any Query</h1>
 
                     <div class="col-lg-6 pb-2 pb-lg-0 " style="margin-bottom: 25px;">
                         <img class="img-fluid w-100" src="./img/image01.jpg" alt="">
+                    </div>
+                    <div class="col-lg-6 pb-2 pb-lg-0 " style="margin-bottom: 25px;">
+                        <img class="img-fluid w-100" src="./img/coustomer_review_man2.png" alt="">
                     </div>
                     <p class="mb-1"></p>
                 </div>
